Edit app.css and report.css to fix align

--- a/project/frontend/src/Components/App/App.css
+++ b/project/frontend/src/Components/App/App.css
@@ -260,11 +260,12 @@ footer {
 /* Use in Report.css*/
 .radio-inline input[type="radio"] {
   display: inline-block;
-  vertical-align: middle; /* Add this line to vertically align the radio buttons */
+  width:20px;
+  vertical-align: middle; 
   margin-right: 10px;
 }
 
 .radio-inline label {
   display: inline-block;
-  vertical-align: middle; /* Add this line to vertically align the labels */
+  vertical-align: middle; 
 }
